--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -12,7 +12,8 @@
     "esModuleInterop": true,     // Enable interoperability with CommonJS modules
     "forceConsistentCasingInFileNames": true,  // Ensure file names are treated case-sensitively
     "skipLibCheck": true,        // Skip checking declaration files for faster builds
-    "strict": true               // Enable strict type-checking options
+    "strict": false,               // Enable strict type-checking options
+    "types": ["node", "express"]
   },
   "include": ["src/**/*","prisma/**/*"],
   "exclude": ["node_modules"]    // Exclude node_modules from the compilation
