--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,5 +27,9 @@
     "prisma": "^5.20.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
-  }
+  },
+  "prisma": {
+		"schema": "db/schema.prisma",
+		"seed": "ts-node db/seed.ts"
+	}
 }
