feat: handle error in product, category apis and token authentication

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -17,12 +17,14 @@
     "strict": false, // Enable strict type-checking options
     "types": [
       "node",
-      "express"
-    ]
+      "express",
+    ],
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": [
     "src/**/*",
-    "db/**/*"
+    "db/**/*",
+    "types/**/*"
   ],
   "exclude": [
     "node_modules"
